--- a/index.html
+++ b/index.html
@@ -1,1 +1,6 @@
-Hello World
+<head>
+  <style src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></style>
+</head>
+<body>
+Hello World!
+</body>
