--- a/index.html
+++ b/index.html
@@ -1,6 +1,34 @@
+<!DOCTYPE html>
+<html>
 <head>
-  <style src="//netdna.bootstrapcdn.com/bootstrap/3.1.1/js/bootstrap.min.js"></style>
+  <link rel="stylesheet" style="text/css" href="bootstrap.min.css">
+  <link rel="stylesheet" style="text/css" href="style.css">
+  <script src="js/app.js"></script>
+  <script src="js/bootstrap.min.js"></script>
 </head>
 <body>
-Hello World!
+
+  <div class="navigation_bar">
+    <ul>
+    <li><a href="#about">About Me</a></li>
+    <li><a href="portfolio.html">Portfolio</a></li>
+    <li><a href="files/SofyaNagaslaeva_WDI.pdf">Resume</a></li>
+    <li><a href="https://github.com/pazzissima">Github</a></li>
+    <li><a href="http://linkedin.com/in/sofianagaslaeva/">LinkedIn</a></li>
+    </ul>  
+  </div>
+
+  <div class='profile_picture'>
+    <img src="files/Sofya.jpg" id="my_pic" height="300">
+  </div>
+
+  <div class="about_me">
+    <a name="about"></a>
+      <div class='about_me_text'>
+      <h3>About Me</h3>
+      <p>blah</p>
+      </div> <!-- end about_me_text -->
+  </div> <!-- end about_me -->
+
 </body>
+</html>
