--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   </div>
 
   <hr/>
-  
+  <div class="content">
   <div class='profile_picture'>
     <img src="files/Sofya.jpg" id="my_pic" height="300">
   </div>
@@ -28,9 +28,12 @@
     <a name="about"></a>
       <div class='about_me_text'>
       <h3>About Me</h3>
-      <p>blah</p>
+      <p>I have recently changed the direction of my career path from Web Marketing and Analytics to Web Development. After graduating from the web development immersive program, I am ready for my first job as a Junior Web Developer.</p>
+      <p>I am equally interested in back-end engineering (Ruby, Ruby on Rails) and front-end (HTML, CSS, JavaScript, jQuery, Angular.js) and have used all these technologies in my 3 projects.</p>
+      <p>In addition to my coding skills, I also have 6 years of experience in Web Marketing, SEO, Web Analytics, Product Management and Forecasting. I have worked in both large companies and small startups, within teams of various sizes, and have a broad perspective on the world of business.</p>
+      <p>Outside of work I spend time dancing Argentine Tango. I also enjoy mountain hiking, swimming and cross-country skiing.
       </div> <!-- end about_me_text -->
   </div> <!-- end about_me -->
-
+</div> <!-- content -->
 </body>
 </html>
