--- a/portfolio.html
+++ b/portfolio.html
@@ -1,15 +1,26 @@
-<div class="container portfolio">
-  <h1>My Projects</h1>
-  <ol>
-    <li>
-      <a href="http://serene-peak-4670.herokuapp.com/">Tarot Cards</a><br>
-      <img src="files/tarot.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
-      <p>This was my first Ruby on Rails project. Tarot Cards are believed to speak about a person's current situation in life and answer some questions on a philosophical and spiritual level. When the User picks a random card they are then required to sign in or sogn up in order to see the meaning of that card. There is also some JavaScript employed in this project.
-    </li><br>
-    <li>
-      <a href="http://audiofile.herokuapp.com/">Audiofile</a><br>
-      <img src="files/audiofile.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
-      <p>This project uses a variety of technologies such as Rails, Paperclip, S3, MediaStream, Sunspot etc. It allows users to upload, share, and upvote audio, create snippets of soundclips, search for user content, make playlists and view a map of user activity worldwide.
-    </li>
-  </ol>
-</div>
+<!DOCTYPE html>
+<html>
+<head>
+  <link rel="stylesheet" style="text/css" href="bootstrap.min.css">
+  <link rel="stylesheet" style="text/css" href="portfolio.css">
+  <script src="js/app.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+</head>
+<body>
+
+  <div class="portfolio">
+    <h1><center>My Projects</center></h1>
+    <ol>
+      <li>
+        <a href="http://serene-peak-4670.herokuapp.com/">Tarot Cards</a><br>
+        <img src="files/tarot.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
+        <p>This was my first Ruby on Rails project. Tarot Cards are believed to speak about a person's current situation in life and answer some questions on a philosophical and spiritual level. When the User picks a random card they are then required to sign in or sogn up in order to see the meaning of that card. There is also some JavaScript employed in this project.
+      </li><br>
+      <li>
+        <a href="http://audiofile.herokuapp.com/">Audiofile</a><br>
+        <img src="files/audiofile.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
+        <p>This project uses a variety of technologies such as Rails, Paperclip, S3, MediaStream, Sunspot etc. It allows users to upload, share, and upvote audio, create snippets of soundclips, search for user content, make playlists and view a map of user activity worldwide.
+      </li>
+    </ol>
+  </div>
+</body>
