--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
 
   <div class="navigation_bar">
     <ul>
-    <li><a href="#about">About Me</a></li>
+    <li><a href="index.html">About Me</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="files/SofyaNagaslaeva_WDI.pdf">Resume</a></li>
+    <li><a href="files/files/Resume.pdf">Resume</a></li>
     <li><a href="https://github.com/pazzissima">Github</a></li>
     <li><a href="http://linkedin.com/in/sofianagaslaeva/">LinkedIn</a></li>
     </ul>  
