--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <ul>
     <li><a href="index.html">About Me</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
-    <li><a href="files/files/Resume.pdf">Resume</a></li>
+    <li><a href="files/Resume.pdf">Resume</a></li>
     <li><a href="https://github.com/pazzissima">Github</a></li>
     <li><a href="http://linkedin.com/in/sofianagaslaeva/">LinkedIn</a></li>
     </ul>  
