added 3rd project to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,11 @@
         <a href="http://audiofile.herokuapp.com/">Audiofile</a><br>
         <img src="files/audiofile.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
         <p>This project uses a variety of technologies such as Rails, Paperclip, S3, MediaStream, Sunspot etc. It allows users to upload, share, and upvote audio, create snippets of soundclips, search for user content, make playlists and view a map of user activity worldwide.
+      </li><br/>
+      <li>
+        <a href="http://evening-forest-8674.herokuapp.com/">Better News</a><br>
+        <img src="files/better_news.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
+        <p>This is a "Better Facebook" application. It allows users to login fith the Facebook account, see all the news feed from Facebook and sort it by the type of content. It also lets users upload and store images that are visible to all the 'Better News' users but don't get published on Facebook itself. Technologies I used include Ruby on Rails, AngularJS, Sidekiq, Redis, S3, Paperclip, etc.
       </li>
     </ol>
   </div>
