--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,12 @@
       <li>
         <a href="http://lovejunkiesthemusical.com" target="_blank">Website for the musical I am in</a><br>
         <a href="http://lovejunkiesthemusical.com" target="_blank"><img src="files/lg.jpg" height="100" style="float: right; margin:0 70px 0 20px;" alt="Love Junkies the Musical" title="Love Junkies the Musical"></a>
-        <p>This is my most recent work. I built a website for a Broadway-style musical using HTML5, CSS3, JavaScript and jQuery.
+        <p>This is my most recent work. I built the official website for a Broadway-style musical using HTML5, CSS3, JavaScript and jQuery.
       </li><br>
 
       <li>
         <a href="http://serene-peak-4670.herokuapp.com/" target="_blank">Tarot Cards</a><br>
-        <img src="files/tarot.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
+        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank"><img src="files/tarot.jpg" height="100" style="float: right; margin:0 70px 0 20px;" alt="Tarot Cards App" title="Tarot Cards App"></a>
         <p>This was my first Ruby on Rails project. Tarot Cards are believed to speak about a person's current situation in life and answer some questions on a philosophical and spiritual level. When the User picks a random card they are then required to sign in or sogn up in order to see the meaning of that card. There is also some JavaScript employed in this project.
       </li><br>
       <li>
