--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <li><a href="index.html">About Me</a></li>
     <li><a href="portfolio.html">Portfolio</a></li>
    <!--  <li><a href="https://docs.google.com/document/d/1INnvxTD_RJSPKfECsTMdnGEG6kHTAcZ5P4qEQpL7yxU/pub?embedded=true">Resume</a></li> -->
-   <li><a href="files/Resume.pdf">Resume</a></li>
+   <li><a href="files/resume_2.pdf">Resume</a></li>
     <li><a href="https://github.com/pazzissima">Github</a></li>
     <li><a href="http://linkedin.com/in/sofianagaslaeva/">LinkedIn</a></li>
     </ul>  
