--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <link rel="stylesheet" style="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" style="text/css" href="style.css">
+  <link rel="shortcut icon" type="image/x-icon" href="files/icon.ico" />
   <script src="/js/app.js"></script>
   <script src="/js/bootstrap.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
