--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <hr/>
   <div class="content">
   <div class='profile_picture'>
-    <img src="files/Sofya.jpg" id="my_pic" height="300">
+    <img src="files/Sofya.jpg" id="my_pic" height="300" title="Sofya Nagaslaeva" alt="Sofya Nagaslaeva">
   </div>
 
   <div class="about_me">
