--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
   <link rel="stylesheet" style="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" style="text/css" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="files/icon.ico" />
-  <script src="/js/app.js"></script>
-  <script src="/js/bootstrap.min.js"></script>
+  <script src="js/app.js"></script>
+  <script src="js/bootstrap.min.js"></script>
   <script src="http://d3js.org/d3.v3.min.js" type="text/javascript" charset="utf-8"></script>
+  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> 
     <script type="text/javascript"></script>
 </head>
 <body>
@@ -32,10 +33,11 @@
       <div class='about_me_text'>
 
 
-
+        <div class="move_text">
         <svg xmlns="http://www.w3.org/2000/svg" version="1.1" height="100" width="350">
         <text x="350" y="70" font-family="sans-serif" font-size="20px" stroke="#FFFFFF" fill="#FFFFFF">About me</text>
         </svg>
+        </div>
 
 
         <p>Not so long ago I changed the direction of my career path from Web Marketing and Analytics to Web Development. After graduating from the web development immersive program, I took my first job as a Junior JavaScript Engineer at a startup.</p>
@@ -59,6 +61,20 @@
       .duration(2000)
       .style("fill", "violet")
       .style("stroke", "violet")
+
+
+      $('svg').one('mouseover', function(){
+        console.log('touch!')
+        $('.move_text').animate({ 
+          marginLeft: "+60px",
+        }, 500 );  
+
+        $('svg').mouseout(function(){
+          $('.move_text').animate({ 
+          marginLeft: "0px",
+        }, 500 ); 
+        })
+      })
   </script>
 </body>
 </html>
