--- a/portfolio.html
+++ b/portfolio.html
@@ -24,23 +24,24 @@
     <ol>
       <li>
         <a href="http://lovejunkiesthemusical.com" target="_blank">Website for the musical I am in</a><br>
-        <a href="http://lovejunkiesthemusical.com" target="_blank"><img src="files/lg.jpg" height="100" style="float: right; margin:0 70px 0 20px;" alt="Love Junkies the Musical" title="Love Junkies the Musical"></a>
+        <a href="http://lovejunkiesthemusical.com" target="_blank"><img src="files/lg.jpg" style="float: right; margin:0 70px 0 20px;" alt="Love Junkies the Musical" title="Love Junkies the Musical">
+        </a>
         <p>This is my most recent work. I built the official website for a Broadway-style musical using HTML5, CSS3, JavaScript and jQuery.
       </li><br>
 
       <li>
         <a href="http://serene-peak-4670.herokuapp.com/" target="_blank">Tarot Cards</a><br>
-        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank"><img src="files/tarot.jpg" height="100" style="float: right; margin:0 70px 0 20px;" alt="Tarot Cards App" title="Tarot Cards App"></a>
+        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank"><img src="files/tarot.jpg" style="float: right; margin:0 70px 0 20px;" alt="Tarot Cards App" title="Tarot Cards App"></a>
         <p>This was my first Ruby on Rails project. Tarot Cards are believed to speak about a person's current situation in life and answer some questions on a philosophical and spiritual level. When the User picks a random card they are then required to sign in or sogn up in order to see the meaning of that card. There is also some JavaScript employed in this project.
       </li><br>
       <li>
-        <a href="http://audiofile.herokuapp.com/" target="_blank">Audiofile</a><br>
-        <img src="files/audiofile.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
+        <a href="https://github.com/pazzissima/wdi-group-project" target="_blank">Audiofile</a><br>
+        <img src="files/audiofile.jpg" style="float: right; margin:0 70px 0 20px;">
         <p>This project uses a variety of technologies such as Rails, Paperclip, S3, MediaStream, Sunspot etc. It allows users to upload, share, and upvote audio, create snippets of soundclips, search for user content, make playlists and view a map of user activity worldwide.
       </li><br/>
       <li>
-        <a href="http://news.nsof.co" target="_blank">Better News</a><br>
-        <img src="files/better_news.jpg" height="100" style="float: right; margin:0 70px 0 20px;">
+        <a href="https://github.com/pazzissima/final_project" target="_blank">Better News</a><br>
+        <img src="files/better_news.jpg" style="float: right; margin:0 70px 0 20px;">
         <p>This is a "Better Facebook" application. It allows users to login fith the Facebook account, see all the news feed from Facebook and sort it by the type of content. It also lets users upload and store images that are visible to all the 'Better News' users but don't get published on Facebook itself. Technologies I used include Ruby on Rails, AngularJS, Sidekiq, Redis, S3, Paperclip, etc.
       </li>
     </ol>
