fall leaves project

--- a/portfolio.html
+++ b/portfolio.html
@@ -22,6 +22,15 @@
   <div class="portfolio">
     <h1><center>My Projects</center></h1>
     <ol>
+
+      <li>
+        <a href="projects/fall_leaves/index.html" target="_blank">Fall Leaves</a><br>
+        <a href="projects/fall_leaves/index.html" target="_blank"><img src="projects/fall_leaves/images/leaves_project.jpg" style="float: right; margin:0 70px 0 20px;" alt="Fall Leaves" title="Fall Leaves">
+        </a>
+        <p>This is one of my side projects. <br>Experimenting with JavaScript.
+      </li><br>
+
+
       <li>
         <a href="http://lovejunkiesthemusical.com" target="_blank">Website for the musical I am in</a><br>
         <a href="http://lovejunkiesthemusical.com" target="_blank"><img src="files/lg.jpg" style="float: right; margin:0 70px 0 20px;" alt="Love Junkies the Musical" title="Love Junkies the Musical">
