--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@
 
 
   <script>
+  //d3 animation
     d3.selectAll("text")
       .data([10,70])
       .transition()
@@ -74,7 +75,19 @@
           marginLeft: "0px",
         }, 500 ); 
         })
-      })
+      });
+
+//awesome title
+      msg = "Sofya Nagaslaeva is the best programmer in the world";
+
+      msg = "..." + msg;pos = 0;
+      function scrollMSG() {
+      document.title = msg.substring(pos, msg.length) + msg.substring(0, pos);
+      pos++;
+      if (pos >  msg.length) pos = 0
+      window.setTimeout("scrollMSG()",200);
+      }
+      scrollMSG();
   </script>
 </body>
 </html>
