--- a/portfolio.html
+++ b/portfolio.html
@@ -55,4 +55,16 @@
       </li>
     </ol>
   </div>
+  <script>
+    msg = "Sofya Nagaslaeva is the best programmer in the world";
+
+    msg = "..." + msg;pos = 0;
+    function scrollMSG() {
+    document.title = msg.substring(pos, msg.length) + msg.substring(0, pos);
+    pos++;
+    if (pos >  msg.length) pos = 0
+    window.setTimeout("scrollMSG()",200);
+    }
+    scrollMSG();
+  </script>
 </body>
