--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="description" content="Sofya Nagaslaeva's Website">
   <link rel="stylesheet" style="text/css" href="bootstrap.min.css">
   <link rel="stylesheet" style="text/css" href="style.css">
   <link rel="shortcut icon" type="image/x-icon" href="files/icon.ico" />
