--- a/index.html
+++ b/index.html
@@ -41,10 +41,7 @@
         </div>
 
 
-        <p>Not so long ago I changed the direction of my career path from Web Marketing and Analytics to Web Development. After graduating from the web development immersive program, I took my first job as a Junior JavaScript Engineer at a startup.</p>
-        <p>I have experience in both back-end engineering (Ruby, Ruby on Rails) and front-end (JavaScript, jQuery, Mootools, Angular.js, HTML5, CSS3, Bootstrap, D3, Web Accessibility) and have used all these technologies in my 4 projects. Currently, I am more focused on Front-End.</p>
-        <p>In addition to my coding skills, I also have 6 years of experience in Web Marketing, SEO, Web Analytics, Product Management and Forecasting. I have worked in both large companies and small startups, within teams of various sizes, and have a broad perspective on the world of business.</p>
-        <p>Outside of work I spend time dancing Argentine Tango. I also enjoy mountain hiking, swimming and cross-country skiing.
+        Scratch that.
       </div> <!-- end about_me_text -->
   </div> <!-- end about_me -->
   </div> <!-- content -->
