--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
 </head>
 <body>
  <style>
+ .construction{
+  text-align: center;
+ }
   .profilePic{
     position: relative;
     top: 122px;
@@ -136,6 +139,9 @@
   margin: 30px;
 }*/
  </style>
+  <div class="construction">
+    The website is under construction. Stay tuned!
+  </div>
 
   <div class='profilePic'>
     <img src="files/Sofya.jpg" id="my_pic" height="300" title="Sofya Nagaslaeva" alt="Sofya Nagaslaeva">
