--- a/index.html
+++ b/index.html
@@ -140,7 +140,7 @@
 }*/
  </style>
   <div class="construction">
-    The website is under construction. Stay tuned!
+    The website is under re-construction. Stay tuned!
   </div>
 
   <div class='profilePic'>
