--- a/index.html
+++ b/index.html
@@ -38,6 +38,7 @@ ul {
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   top: 350px;
+  width: 389px;
 /*  position: fixed;*/
 }
 ul li {
@@ -63,7 +64,7 @@ ul li ul {
   position: absolute;
   top: 35px;
 /*  top: 48px;*/
-  left: -43px;
+  left: -42px;
   width: 100px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -89,6 +90,9 @@ ul li:hover ul {
   opacity: 1;
   visibility: visible;
 }
+/*@media (min-width: 1288) {
+
+}*/
  </style>
   <div class="construction">
     The website is under re-construction. Stay tuned!
