--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@ ul li:hover ul {
     </nav>
   </div> -->
 <ul>
-  <li>About</li>
+  <li><a href="#">About</a></li>
   <li>
     Web Developer
     <ul>
