--- a/index.html
+++ b/index.html
@@ -60,9 +60,10 @@ ul li {
   -ms-transition: all 0.2s;
   -o-transition: all 0.2s;
   transition: all 0.2s;
+  z-index: 600;
 }
 ul li:hover {
-  background: #555;
+  background: rgb(75,0,130);
   color: #fff;
 }
 ul li ul {
@@ -85,12 +86,12 @@ ul li ul {
   -transition: opacity 0.2s;
 }
 ul li ul li { 
-  background: #555; 
+  background: rgba(75,0,130,0.2); 
   display: block; 
   color: #fff;
   text-shadow: 0 -1px 0 #000;
 }
-ul li ul li:hover { background: #666; }
+ul li ul li:hover { background: rgb(75,0,130); }
 ul li:hover ul {
   display: block;
   opacity: 1;
@@ -129,7 +130,7 @@ ul li:hover ul {
   function carousel(){
      $( "#sliderImage" ).animate({
         left: "-552",
-        }, 3000, function() {
+        }, 5000, function() {
           var firstImg=$("#sliderImage img").first();
         $("#sliderImage").append(firstImg);
         $("#sliderImage").css("left","-276px");
@@ -142,7 +143,7 @@ ul li:hover ul {
       clearInterval(interval);
       $( "#sliderImage" ).animate({
           left: "-552",
-          }, 3000, function() {
+          }, 5000, function() {
             var firstImg=$("#sliderImage img").first();
           $("#sliderImage").append(firstImg);
           $("#sliderImage").css("left","-276px");
@@ -154,7 +155,7 @@ ul li:hover ul {
       clearInterval(interval);
       $( "#sliderImage" ).animate({
           left: "0",
-          }, 3000, function() {
+          }, 5000, function() {
             var lastImg=$("#sliderImage img").last();
           $("#sliderImage").prepend(lastImg);
           $("#sliderImage").css("left","-276px");
