wallpaper and stuff

--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
  <style>
  body{
   height: 500px;
+  background: url('files/wallpaper5.jpg');
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
  }
  .topTop {
   height: 450px;
@@ -71,8 +76,8 @@ ul li ul {
   position: absolute;
   top: 35px;
 /*  top: 48px;*/
-  left: -42px;
-  width: 100px;
+  left: -32%;
+  width: 116px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
   box-shadow: none;
