--- a/portfolio.html
+++ b/portfolio.html
@@ -25,7 +25,8 @@
 
       <li>
         <a href="projects/fall_leaves/index.html" target="_blank">Fall Leaves</a><br>
-        <a href="projects/fall_leaves/index.html" target="_blank"><img src="projects/fall_leaves/images/leaves_project.jpg" alt="Fall Leaves" title="Fall Leaves">
+        <a href="projects/fall_leaves/index.html" target="_blank">
+          <figure><img src="projects/fall_leaves/images/leaves_project.jpg" alt="Fall Leaves" title="Fall Leaves"></figure>
         </a>
         <p>This is one of my side projects. <br>Experimenting with JavaScript.
       </li><br>
@@ -33,14 +34,17 @@
 
       <li>
         <a href="http://lovejunkiesthemusical.com" target="_blank">Website for the musical I am in</a><br>
-        <a href="http://lovejunkiesthemusical.com" target="_blank"><img src="files/lg.jpg" alt="Love Junkies the Musical" title="Love Junkies the Musical">
+        <a href="http://lovejunkiesthemusical.com" target="_blank">
+          <figure><img src="files/lg.jpg" alt="Love Junkies the Musical" title="Love Junkies the Musical"></figure>
         </a>
         <p>This is my most recent work. I built the official website for a Broadway-style musical using HTML5, CSS3, JavaScript and jQuery.
       </li><br>
 
       <li>
         <a href="http://serene-peak-4670.herokuapp.com/" target="_blank">Tarot Cards</a><br>
-        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank"><img src="files/tarot.jpg" alt="Tarot Cards App" title="Tarot Cards App"></a>
+        <a href="http://serene-peak-4670.herokuapp.com/" target="_blank">
+          <figure><img src="files/tarot.jpg" alt="Tarot Cards App" title="Tarot Cards App"></figure>
+        </a>
         <p>This was my first Ruby on Rails project. Tarot Cards are believed to speak about a person's current situation in life and answer some questions on a philosophical and spiritual level. When the User picks a random card they are then required to sign in or sogn up in order to see the meaning of that card. There is also some JavaScript employed in this project.
       </li><br>
      <!--  <li>
@@ -50,7 +54,7 @@
       </li><br/> -->
       <li>
         <a href="https://github.com/pazzissima/final_project" target="_blank">Better News</a><br>
-        <img src="files/better_news.jpg" style="float: right; margin:0 70px 0 20px;">
+          <figure><img src="files/better_news.jpg" style="float: right; margin:0 70px 0 20px;"></figure>
         <p>This is a "Better Facebook" application. It allows users to login fith the Facebook account, see all the news feed from Facebook and sort it by the type of content. It also lets users upload and store images that are visible to all the 'Better News' users but don't get published on Facebook itself. Technologies I used include Ruby on Rails, AngularJS, Sidekiq, Redis, S3, Paperclip, etc.
       </li>
     </ol>
