projects and index page update

--- a/index.html
+++ b/index.html
@@ -192,10 +192,10 @@ if ( jQuery('#arrowR').length > 0) {
   <li>
     Web Developer
     <ul>
-      <li><a href="files/Resume.pdf">Resume</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="https://github.com/pazzissima">Github</a></li>
-      <li><a href="http://linkedin.com/in/sofianagaslaeva/">LinkedIn</a></li>
+      <a href="files/Resume.pdf"><li>Resume</li></a>
+      <a href="portfolio.html"><li>Portfolio</li></a>
+      <a href="https://github.com/pazzissima"><li>Github</li></a>
+      <a href="http://linkedin.com/in/sofianagaslaeva/"><li>LinkedIn</li></a>
     </ul>
   </li>
   <li>Tango Dancer</li>
