--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
 .rest{
   text-align: center;
 }
-
+ul li ul a:hover {
+  text-decoration: none;
+}
 /*DROPDOWN styles*/
 ul {
   position: absolute;
