--- a/index.html
+++ b/index.html
@@ -45,14 +45,13 @@ ul {
   text-align: left;
   display: inline;
   margin: 12px 36%;
-  padding: 8px 4px 5px 0;
+  padding: 6px;
   list-style: none;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   -moz-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
   top: 350px;
-  width: 389px;
-/*  position: fixed;*/
+  width: 394px;
 }
 ul li {
   font: bold 12px/18px sans-serif;
@@ -190,7 +189,7 @@ if ( jQuery('#arrowR').length > 0) {
 
 
 <ul>
-  <li><a href="#">About</a></li>
+  <a href="#"><li>About</li></a>
   <li>
     Web Developer
     <ul>
