added fonts, removed profile pic

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@ ul {
   position: absolute;
   text-align: left;
   display: inline;
-  margin: 12px 36%;
+  margin: 12px 33%;
   padding: 6px;
   list-style: none;
   -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
@@ -127,6 +127,22 @@ ul li:hover ul {
   width:828px;
   top: -68px;
 }
+@font-face {
+    font-family: myFirstFont;
+    src: url(CookieMonster.ttf);
+    font-weight: bold;
+}
+.new_fonts {
+    font-family: myFirstFont;
+    font-size: 57px;
+    position: relative;
+    text-align: center;
+    color: #8B008B;
+    margin-top: 20px;
+    margin: 20px 26%;
+    border: 2px solid #8B008B;
+    border-radius: 2%;
+}
  </style>
 
  <script type="text/javascript">
@@ -183,8 +199,12 @@ if ( jQuery('#arrowR').length > 0) {
     The website is under re-construction. Stay tuned!
   </div>
 
-  <div class='profilePic'>
+  <!-- <div class='profilePic'>
     <img src="files/Sofya.jpg" id="my_pic" height="300" title="Sofya Nagaslaeva" alt="Sofya Nagaslaeva">
+  </div> -->
+  <div class="new_fonts">
+  Sofya Nagaslaeva<br/>
+  <span style="font-size: 33px">HTML. CSS. JavaScript.</span>
   </div>
 
 
