--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   background-size: cover;
  }
  .topTop {
-  height: 450px;
+  height: 314px;
  }
  .construction{
   text-align: center;
@@ -41,7 +41,7 @@ ul li ul a:hover {
 }
 /*DROPDOWN styles*/
 ul {
-  position: absolute;
+/*  position: absolute;*/
   text-align: left;
   display: inline;
   margin: 12px 33%;
@@ -77,7 +77,7 @@ ul li ul {
   position: absolute;
   top: 35px;
 /*  top: 48px;*/
-  left: -36%;
+  left: -33%;
   width: 116px;
   -webkit-box-shadow: none;
   -moz-box-shadow: none;
@@ -142,6 +142,18 @@ ul li:hover ul {
     margin: 20px 26%;
     border: 2px solid #8B008B;
     border-radius: 2%;
+}
+@media (max-width: 800px) {
+  .topTop {
+    height: 368px;
+  }
+  ul {
+    margin: 12px 23%;
+  }
+  ul li ul {
+    left: -23%;
+  }
+ 
 }
  </style>
 
