--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ ul li {
   -o-transition: all 0.2s;
   transition: all 0.2s;
   z-index: 600;
+  color: black;
 }
 ul li:hover {
   background: rgb(75,0,130);
@@ -231,7 +232,7 @@ if ( jQuery('#arrowR').length > 0) {
       <a href="http://linkedin.com/in/sofianagaslaeva/"><li>LinkedIn</li></a>
     </ul>
   </li>
-  <li>Tango Dancer</li>
+  <a href="tango.html"><li>Tango Dancer</li></a>
   <li>Contact</li>
 </ul>
 </div> <!-- Toptop -->
