--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@ ul li ul a:hover {
 ul {
 /*  position: absolute;*/
   text-align: left;
-  display: inline;
+/*  display: inline;*/
   margin: 12px 33%;
   padding: 6px;
   list-style: none;
