add contact page

--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@ if ( jQuery('#arrowR').length > 0) {
     </ul>
   </li>
   <a href="tango.html"><li>Tango Dancer</li></a>
-  <li>Contact</li>
+  <a href="contact.html"><li>Contact</li></a>
 </ul>
 </div> <!-- Toptop -->
 
