--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@ if ( jQuery('#arrowR').length > 0) {
     Hi!
   </div>
 
-  <div id="sliderContainer" style="position:relative;">
+<!--   <div id="sliderContainer" style="position:relative;">
     <div id="sliderImage" style="position:absolute;left:-276px;">
       <img src="files/c6.jpg"/>
       <img src="files/c7.jpg" alt="Sofya Nagaslaeva"/>
@@ -256,7 +256,7 @@ if ( jQuery('#arrowR').length > 0) {
       <div id="arrowL" style="position:absolute;top:200px;left:0px;"><img src="files/leftArrow.png"/></div>
     </div> 
     
-  </div>  <!-- sliderContainer -->
+  </div>  --> <!-- sliderContainer -->
 
 
 
