--- a/index.html
+++ b/index.html
@@ -224,13 +224,13 @@ ul li:hover ul {
       <div class="my-responsive-carousel__view">
           <div class="my-responsive-carousel__items">
               <div>
-                  <img src="files/c6.jpg" />
+                  <img src="files/c11.jpg" />
               </div>
               <div>
-                  <img src="files/c7.jpg" />
+                  <img src="files/c12.jpg" />
               </div>
               <div>
-                  <img src="files/c8.jpg" />
+                  <img src="files/c13.jpg" />
               </div>
           </div>
       </div>
@@ -245,7 +245,7 @@ ul li:hover ul {
 <script>
 
 //awesome title
-    msg = "Sofya Nagaslaeva is the best programmer in the world";
+    msg = "Sofya Nagaslaeva. Front-end development: HTML, CSS, JavaScript.";
 
     msg = "..." + msg;pos = 0;
     function scrollMSG() {
